--- a/shared/datadog-metrics/Cargo.toml
+++ b/shared/datadog-metrics/Cargo.toml
@@ -2,10 +2,11 @@
 name = "datadog-metrics"
 version = { workspace = true }
 edition = { workspace = true }
-license = { workspace = true }
 
 [dependencies]
+dogstatsd = { workspace = true }
+once_cell = "1.19"
 tracing = { workspace = true }
-serde = { workspace = true }
-dogstatsd = "0.12.1"
-once_cell = "1.21.3"
+
+[dev-dependencies]
+tokio = { workspace = true }
