--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,8 +99,9 @@ pontifex = { version = "1.0.1" }
 # Datadog tracing
 datadog-tracing = { version = "0.3.0", features = ["axum"] }
 
-# Crypto box
+# Encryption
 crypto_box = { version = "0.9.1" }
+chacha20poly1305 = "0.10.1"
 
 # Test dependencies
 http-body-util = "0.1.3"
