--- a/enclave-worker/.env.example
+++ b/enclave-worker/.env.example
@@ -15,3 +15,5 @@ ENCLAVE_PORT=1000
 # Passed onto the enclave
 BRAZE_API_KEY=your_api_key_here
 BRAZE_API_URL=https://rest.iad-05.braze.com
+
+REDIS_URL=redis://localhost:6379
