--- a/enclave-worker/Cargo.toml
+++ b/enclave-worker/Cargo.toml
@@ -48,3 +48,10 @@ enclave-types = { workspace = true }
 common-types = { workspace = true }
 
 base64 = { workspace = true }
+
+redis = { workspace = true, features = ["tokio-comp", "aio", "connection-manager"]}
+
+[dev-dependencies]
+uuid = { workspace = true }
+dotenvy = { workspace = true }
+pretty_assertions = "1.4.1"
