feat: Move braze logic inside the enclave (#70)
* Secure enclave notif logic

* complete flow

* Make it work with http2

* Update .env.example

* Switch to ecr gallery

* add info log

* break infinite loop

* Remove panic and old comment

* Revert docker image change and set published pontifex version

* Proto

* cargo.lock

* Update CI

* clippy and cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ axum-jsonschema = { version = "0.8.0", features = ["aide"] }
 axum = "0.7.9"
 tower      = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
+hyper = { version = "0.14" }
 
 # Async 
 tokio = { version = "1.47.1", features = ["full"] }
@@ -94,7 +95,7 @@ enclave-types = { path = "shared/enclave-types" }
 common-types = { path = "shared/common-types" }
 
 # Pontifex
-pontifex = { version = "1.0.1" }
+pontifex = { version = "1.1.1" }
 
 # Datadog tracing
 datadog-tracing = { version = "0.3.0", features = ["axum"] }
