feat: Add cache manager (#73)

--- a/enclave-worker/.env.example
+++ b/enclave-worker/.env.example
@@ -16,3 +16,5 @@ ENCLAVE_PORT=1000
 BRAZE_API_KEY=your_api_key_here
 BRAZE_API_REGION=iad-05
 BRAZE_HTTP_PROXY_PORT=9002
+
+REDIS_URL=redis://localhost:6379
