--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,9 @@ datadog-tracing = { version = "0.3.0", features = ["axum"] }
 # Crypto box
 crypto_box = { version = "0.9.1" }
 
+# Redis (We use Elasticache)
+redis = { version = "0.32.5" }
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
