descrypt and switch to user aliases

--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -29,6 +29,8 @@ enclave-types = { workspace = true }
 
 serde_json = { workspace = true }
 
+serde = { workspace = true }
+
 hyper = { workspace = true }
 
 uuid = { workspace = true }
