--- a/enclave-worker/Cargo.toml
+++ b/enclave-worker/Cargo.toml
@@ -50,6 +50,7 @@ enclave-types = { workspace = true }
 common-types = { workspace = true }
 
 base64 = { workspace = true }
+hex = { workspace = true }
 
 redis = { workspace = true, features = ["tokio-comp", "aio", "connection-manager"]}
 
