--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -28,5 +28,7 @@ pontifex = { workspace = true, features = ["server", "http", "nsm"] }
 enclave-types = { workspace = true }
 
 serde_json = { workspace = true }
+serde = { workspace = true }
+hex = { workspace = true }
 
 hyper = { workspace = true }
