--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -23,7 +23,7 @@ tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 
 # Pontifex server
-pontifex = { workspace = true, features = ["server", "http", "nsm"] }
+pontifex = { workspace = true, features = ["server", "http", "nsm", "client"] }
 
 enclave-types = { workspace = true }
 
