--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,15 @@ license      = "MIT"
 
 [workspace.dependencies]
 # Web framework
-aide = { version = "0.13.4", features = [
+aide = { version = "0.15.1", features = [
     "axum",
     "scalar",
     "macros",
+    "axum-json",
+    "axum-query",
+    "axum-matched-path"
 ] }
-axum-jsonschema = { version = "0.8.0", features = ["aide"] }
-axum = "0.7.9"
+axum = "0.8"
 tower      = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 hyper = { version = "0.14" }
@@ -66,14 +68,18 @@ aws-sdk-dynamodb = "1.82"
 aws-sdk-s3 = "1.82"
 aws-sdk-kms = "1.82"
 
-# Schema generation for OpenAPI
-schemars = { version = "0.8.21", features = ["derive"] }
+schemars = { version = "0.9.0", features = ["derive"] }
 
 # DynamoDB serialization
 serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
 
 # Strum
 strum = { version = "0.26.3", features = ["derive"] }
+
+# Validation
+axum-valid = { version = "0.24.0", features = ["aide", "validator"] }
+validator = { version = "0.20", features = ["derive"] }
+regex = "1.11"
 
 # Internal workspace dependencies
 backend_storage = { path = "shared/backend_storage" }
