--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,7 +12,6 @@ path = "src/main.rs"
 # Web framework
 aide = { workspace = true }
 axum = { workspace = true }
-axum-jsonschema = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 
@@ -48,6 +47,11 @@ chrono = { workspace = true }
 
 # Schema generation for OpenAPI
 schemars = { workspace = true }
+
+# Validation
+axum-valid = { workspace = true }
+validator = { workspace = true }
+regex = { workspace = true }
 
 # Encoding
 base64 = { workspace = true }
