--- a/.github/workflows/update-proto.yml
+++ b/.github/workflows/update-proto.yml
@@ -18,11 +18,7 @@ jobs:
       pull-requests: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
       - name: Install buf
         uses: bufbuild/buf-setup-action@v1
