--- a/shared/backend_storage/Cargo.toml
+++ b/shared/backend_storage/Cargo.toml
@@ -38,8 +38,10 @@ rand = { workspace = true }
 
 futures = { workspace = true }
 
+# UUID generation
+uuid = { workspace = true }
+
 [dev-dependencies]
 tokio-test = { workspace = true }
-uuid = { workspace = true }
 aws-credential-types = { version = "1.2.5" , features = ["hardcoded-credentials"]}
 pretty_assertions = "1.4.1"
