--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,8 @@ S3_BUCKET_NAME=world-chat-media
 
 DYNAMODB_AUTH_TABLE_NAME=world-chat-auth-proofs
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
+DYNAMODB_GROUP_INVITES_TABLE_NAME=world-chat-group-invites
+DYNAMODB_GROUP_INVITES_TOPIC_INDEX_NAME=topic-index
 
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
 
