feat: Add group join requests table

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,8 @@ S3_BUCKET_NAME=world-chat-media
 
 DYNAMODB_AUTH_TABLE_NAME=world-chat-auth-proofs
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
+DYNAMODB_GROUP_JOIN_REQUESTS_TABLE_NAME=world-chat-group-join-requests
+DYNAMODB_GROUP_JOIN_REQUESTS_GROUP_INVITE_INDEX_NAME=group-invite-index
 
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
 
