--- a/shared/enclave-types/Cargo.toml
+++ b/shared/enclave-types/Cargo.toml
@@ -10,5 +10,6 @@ thiserror = { workspace = true }
 
 # Serialization
 serde = { workspace = true }
+serde_json = { workspace = true }
 
 pontifex = { workspace = true, features = ["nsm", "client"] }
