--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,8 @@ DYNAMODB_AUTH_TABLE_NAME=world-chat-auth-proofs
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
 DYNAMODB_GROUP_INVITES_TABLE_NAME=world-chat-group-invites
 DYNAMODB_GROUP_INVITES_TOPIC_INDEX_NAME=topic-index
+DYNAMODB_GROUP_JOIN_REQUESTS_TABLE_NAME=world-chat-group-join-requests
+DYNAMODB_GROUP_JOIN_REQUESTS_GROUP_INVITE_INDEX_NAME=group-invite-index
 
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
 
