--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,11 @@ datadog-tracing = { version = "0.3.0", features = ["axum"] }
 metrics = "0.24.2"
 metrics-exporter-dogstatsd = "0.9.6"
 
+# OpenTelemetry for distributed tracing
+opentelemetry = "0.21"
+opentelemetry_sdk = "0.21"
+tracing-opentelemetry = "0.22"
+
 # Crypto box
 crypto_box = { version = "0.9.1" }
 
