Add client info to traces

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,6 +30,7 @@ tracing-subscriber = { workspace = true }
 
 # Datadog tracing
 datadog-tracing = { workspace = true }
+tracing-opentelemetry = "0.32"
 
 # Error handling
 anyhow = { workspace = true }
