try different approach

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,7 +30,7 @@ tracing-subscriber = { workspace = true }
 
 # Datadog tracing
 datadog-tracing = { workspace = true }
-tracing-opentelemetry = "0.32"
+opentelemetry = "0.27"
 
 # Error handling
 anyhow = { workspace = true }
