feat(storage): add enclave_track field to PushSubscription
Add enclave track version identifier to push subscriptions to support
multi-enclave track architecture. This enables routing notifications to
the correct enclave based on which track the subscription was created with.

Changes:
- Add EnclaveTrack enum to common-types with V2 (default) and V3 (placeholder)
- Add enclave_track field to PushSubscription struct in backend_storage
- Update subscription creation in backend routes
- Update all tests to include the new field

--- a/notification-worker/Cargo.toml
+++ b/notification-worker/Cargo.toml
@@ -55,6 +55,7 @@ metrics-exporter-dogstatsd = { workspace = true }
 serial_test = { workspace = true }
 dotenvy = { workspace = true }
 pretty_assertions = "1.4.1"
+common-types = { path = "../shared/common-types" }
 
 # Build dependencies
 [build-dependencies]
